--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,8 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+    {# navbar is superfluous? #}
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -57,6 +59,7 @@
 
     {% block content %}{% endblock %}
 
+    <div class="container">
       <hr>
 
       <footer>
