--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,8 +3,6 @@
 {% block title %} Nick's New Haircut {% endblock %}
 
 {% block content %}
-
-    <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
         <h1>Hello, world!</h1>
@@ -16,21 +14,17 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
+        {% for contestant in contestants %}
+          <div class="col-md-4">
+            <img src="{{contestant.photo}}" class="img-circle" alt="{{ ontestant.first_name }}" />
+            <h2>{{ contestant.first_name }}</h2>
+            <p>{{ contestant.bio }}</p>
+            <p><a class="btn btn-default" href="{% url 'contestant-detail' pk=contestant.pk %}" role="button">
+              {{ contestant.first_name }}'s deets &raquo;</a>
+            </p>
+          </div>
+        {% endfor %}
       </div>
+    </div>
 
 {% endblock %}
