--- a/app/templates/app/contestant_detail.html
+++ b/app/templates/app/contestant_detail.html
@@ -10,9 +10,10 @@
         <div class="col-md-2">
           <img src="{{object.photo}}" class="img-circle" alt="{{object.first_name}}" />
         </div>
-        <div class="col-md-8">
+        <div class="col-md-10">
           <h1>It's {{ contestant.first_name }} {{ contestant.last_name}} !!!</h1>
           <p>{{object.bio}}</p>
+          <p><a class="btn btn-primary btn-lg" href="{% url 'contestant-donate' pk=contestant.pk %}" role="button">Make {{ contestant.first_name }} look crazy &raquo;</a></p>
         </div>
       </div>
     </div>
