--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,7 +63,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2015</p>
+        <p>&copy; Nick Karlow, Michael Rizzo, Justin Porter 2016</p>
       </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="{% static "initializr/js/vendor/jquery-1.11.2.min.js" %}"><\/script>')</script>
