--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,6 +44,7 @@
           <a class="navbar-brand" href="#">Project name</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+          {% comment %}
           <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
               <input type="text" placeholder="Email" class="form-control">
@@ -53,6 +54,7 @@
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
+          {% endcomment %}
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
