--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Home</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           {% comment %}
