--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %} Nick's New Haircut {% endblock %}
 
 {% block content %}
-    <div class="jumbotron">
+    <div class="jumbotron masthead">
       <div class="container">
         <h1>Hello, world!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
