--- a/app/templates/app/contestant_detail.html
+++ b/app/templates/app/contestant_detail.html
@@ -7,13 +7,21 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron ">
       <div class="container">
-        <div class="col-md-2">
-          <img src="{{object.photo}}" class="img-circle" alt="{{object.first_name}}" />
+        <div class="row">
+          <div class="col-md-2">
+            <img src="{{object.photo}}" class="img-circle" alt="{{object.first_name}}" />
+          </div>
+          <div class="col-md-10">
+            <h1>It's {{ contestant.first_name }} {{ contestant.last_name}} !!!</h1>
+            <p>{{object.bio}}</p>
+            <p><a class="btn btn-primary btn-lg" href="{% url 'contestant-donate' pk=contestant.pk %}" role="button">Make {{ contestant.first_name }} look crazy &raquo;</a></p>
+          </div>
         </div>
-        <div class="col-md-10">
-          <h1>It's {{ contestant.first_name }} {{ contestant.last_name}} !!!</h1>
-          <p>{{object.bio}}</p>
-          <p><a class="btn btn-primary btn-lg" href="{% url 'contestant-donate' pk=contestant.pk %}" role="button">Make {{ contestant.first_name }} look crazy &raquo;</a></p>
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-10">
+            ${{ donation_total }} raised by {{ donation_people }} people!
+          </div>
         </div>
       </div>
     </div>
@@ -29,7 +37,7 @@
             <p class="lead">${{ haircut.goal_amount}}</p>
             <p>{% lorem 30 w %}</p>
 
-            {{ progresses }}
+            {{ progresses }} <!-- FIXME: is this a rememnant? -->
 
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="{{haircut.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{haircut.progress}}%;">{{ haircut.progress | floatformat:1 }}%</div>
