--- a/app/templates/app/contestant_detail.html
+++ b/app/templates/app/contestant_detail.html
@@ -30,15 +30,12 @@
       <!-- Example row of columns -->
 
       <div class="row">
-        {% for haircut in contestant.haircut_set.all %}
+        {% for haircut in contestant.haircut_set.all|dictsort:"goal_amount" %}
           <div class="col-md-4">
-            <img src="{{haircut.photo}}" class="img-circle" alt="{{haircut.name}}" />
+            <img src="{{haircut.photo}}" class="img-circle center-block" alt="{{haircut.name}}" />
             <h2>{{ haircut.name }}</h2>
             <p class="lead">${{ haircut.goal_amount}}</p>
             <p>{% lorem 30 w %}</p>
-
-            {{ progresses }} <!-- FIXME: is this a rememnant? -->
-
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="{{haircut.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{haircut.progress}}%;">{{ haircut.progress | floatformat:1 }}%</div>
             </div>
