--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %} Nick's New Haircut {% endblock %}
+{% block title %} Cuts for a Cause {% endblock %}
 
 {% block content %}
     <div class="jumbotron masthead">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p>Cuts for a Cause was founded by three WUSM M2s who hadn't had haircuts or shaves in far too long and wanted to make that fact count for something more than a lot of hair on the floor whenever they did finally get a trim. One of the three, Nick Karlow, had recently been diagnosed with Dent Disease, a rare genetic renal condition and had been repeatedly frustrated by how unknown the disease was, even within the medical community. Naturally, these three M2s and their friends decided the most rational thing to do was to see how much money and awareness they could raise for Dents disease by offering to look as ridiculous as they could imagine. This website tells their story.</p>
       </div>
     </div>
 
@@ -16,7 +14,7 @@
       <div class="row">
         {% for contestant in contestants %}
           <div class="col-md-4">
-            <img src="{{ contestant.photo }}" class="img-circle" alt="{{ ontestant.first_name }}" />
+            <img src="{{ contestant.photo }}" class="img-circle contestant-bust" alt="{{ ontestant.first_name }}" />
             <h2>{{ contestant.first_name }}</h2>
             <p>{{ contestant.bio }}</p>
             <p><a class="btn btn-default" href="{% url 'contestant-detail' pk=contestant.pk %}" role="button">
