--- a/static/initializr/css/main.css
+++ b/static/initializr/css/main.css
@@ -8,15 +8,28 @@
   margin-bottom: 30px;
 
   background-color: #eee;
-  background-image: url(//static.pexels.com/photos/4614/woman-morning-bathrobe-bathroom.jpg);
+  background-image: url(/static/contestants/group_bust.jpg);
   background-position: 0% 40%;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 50vh;
+  background-position: top;
+  /*height: 50vh;*/
+  height: 450px;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 
   color: #eee;
   text-shadow: black 0.3em 0.3em 0.3em;
   text-align: center;
+}
+
+
+.contestant-bust {
+  max-width: 200px;
+  max-height: 200px;
+}
+
+.haircut-circle {
+  max-width: 250px;
+  max-height: 250px;
 }
