--- a/app/templates/app/contestant_detail.html
+++ b/app/templates/app/contestant_detail.html
@@ -13,7 +13,7 @@
           </div>
           <div class="col-md-9">
             <h1>It's {{ contestant.first_name }} {{ contestant.last_name}} !!!</h1>
-            <p>{{object.bio}}</p>
+            <p>{{object.bio|safe}}</p>
             <p><a class="btn btn-primary btn-lg" href="{% url 'contestant-donate' pk=contestant.pk %}" role="button">Make {{ contestant.first_name }} look crazy &raquo;</a></p>
           </div>
         </div>
