--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,7 @@
           <div class="col-md-4">
             <img src="{{ contestant.photo }}" class="img-circle contestant-bust" alt="{{ ontestant.first_name }}" />
             <h2>{{ contestant.first_name }}</h2>
-            <p>{{ contestant.bio }}</p>
+            <p>{{ contestant.bio|safe }}</p>
             <p><a class="btn btn-default" href="{% url 'contestant-detail' pk=contestant.pk %}" role="button">
               {{ contestant.first_name }}'s deets &raquo;</a>
             </p>
