--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="lead"><p>Cuts for a Cause was founded by three WUSM M2s who hadn't had haircuts or shaves in far too long and wanted to make that fact count for something more than a lot of hair on the floor whenever they did finally get a trim. One of the three, Nick Karlow, had recently been diagnosed with Dent Disease, a rare genetic renal condition and had been repeatedly frustrated by how unknown the disease was, even within the medical community. Naturally, these three M2s and their friends decided the most rational thing to do was to see how much money and awareness they could raise for Dents disease by offering to look as ridiculous as they could imagine. This website tells their story.</p></div>
+      <div class="lead"><p>asdf</p></div>
     </div>
 
     <div class="container">
