--- a/static/initializr/css/main.css
+++ b/static/initializr/css/main.css
@@ -8,7 +8,7 @@
   margin-bottom: 30px;
 
   background-color: #eee;
-  background-image: url(/static/contestants/group_bust.jpg);
+  background-image: url(/static/img/haircut.jpg);
   background-position: 0% 40%;
   background-size: cover;
   background-repeat: no-repeat;
